getTasksByFilter function
