# docs/swagger.json
@@ -14,7 +14,7 @@
     "paths": {
         "/tasks": {
             "get": {
-                "description": "Gets all tasks in database",
+                "description": "Gets all tasks in database that pass applied filter",
                 "consumes": [
                     "*/*"
                 ],
@@ -24,7 +24,27 @@
                 "tags": [
                     "tasks"
                 ],
-                "summary": "getTasks",
+                "summary": "getTasksByFilter",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "title",
+                        "name": "title",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "complete",
+                        "name": "complete",
+                        "in": "query"
+                    }
+                ],
                 "responses": {}
             },
             "post": {
@@ -67,55 +87,7 @@
                 "responses": {}
             }
         },
-        "/tasks/complete/{complete}": {
-            "get": {
-                "description": "Gets all tasks with specified \"complete\" value",
-                "consumes": [
-                    "*/*"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "tasks"
-                ],
-                "summary": "getTasksByComplete",
-                "parameters": [
-                    {
-                        "type": "boolean",
-                        "description": "Complete? true or false",
-                        "name": "complete",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {}
-            }
-        },
         "/tasks/id/{id}": {
-            "get": {
-                "description": "Gets all tasks with specified ID",
-                "consumes": [
-                    "*/*"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "tasks"
-                ],
-                "summary": "getTaskByID",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "ID to get",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {}
-            },
             "delete": {
                 "description": "Deletes tast at specified ID",
                 "consumes": [
@@ -156,31 +128,6 @@
                         "type": "integer",
                         "description": "The specified ID",
                         "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {}
-            }
-        },
-        "/tasks/title/{title}": {
-            "get": {
-                "description": "Gets all tasks whose title includes the specified string",
-                "consumes": [
-                    "*/*"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "tasks"
-                ],
-                "summary": "getTasksByTitle",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "The specified string",
-                        "name": "title",
                         "in": "path",
                         "required": true
                     }
